--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stories - Premium Storytelling Experience</title>
+    <title>Voyce Stories - Premium Storytelling Experience (Full Stories)</title>
     <style>
         * {
             margin: 0;
