--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Stories</title>
+    <title>Admin Dashboard - Voyce Stories</title>
     <style>
         * {
             margin: 0;
