--- a/templates/index.html
+++ b/templates/index.html
@@ -174,7 +174,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">Stories</div>
+        <div class="logo">Voyce Stories</div>
         <div class="tagline">Premium storytelling experience.<br>Mystery, emotion, and captivating narratives.</div>
         
         <div class="auth-toggle">
